--- a/index.html
+++ b/index.html
@@ -52,5 +52,17 @@
             </div>
         </div>
     </div>
+    <ul class="bg-bubbles">
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+        <li></li>
+    </ul>
   </body>
 </html>
