--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                             </div>
                             <div class="links">
                                 <a href="./assets/Resume.pdf" download>Download Resume <span class="fas fa-download"></span></a>
-                                <a href="mailto:samuel.fry13@gmail.com">Contact Me <span class="fas fa-envelope"></span></a>
+                                <a href="mailto:sam@samuelfry.com">Contact Me <span class="fas fa-envelope"></span></a>
                             </div>
                         </div>
                         </div>
