chore: update bg-photo; move resume to R2; add gitignore

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <a target="_blank" href="https://www.linkedin.com/in/samuel-fry13/"><span class="fab fa-linkedin"></span></a>
                             </div>
                             <div class="links">
-                                <a href="./assets/Resume.pdf" download>Download Resume <span class="fas fa-download"></span></a>
+                                <a href="https://storage.samuelfry.com/personal-website/Resume.pdf" download>Download Resume <span class="fas fa-download"></span></a>
                                 <a href="mailto:sam@samuelfry.com">Contact Me <span class="fas fa-envelope"></span></a>
                             </div>
                         </div>
