--- a/index.html
+++ b/index.html
@@ -2,58 +2,77 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="/manifest.json" />
-    <script src="https://kit.fontawesome.com/c3da8204db.js" crossorigin="anonymous"></script>
-	<link rel="stylesheet" type="text/css" href="./index.css">
+    <script
+      src="https://kit.fontawesome.com/c3da8204db.js"
+      crossorigin="anonymous"
+      defer
+    ></script>
+    <link rel="stylesheet" type="text/css" href="./index.css" />
     <title>Samuel Fry</title>
   </head>
   <body>
     <div class="page">
-        <div class="container">
-                <div class="card" id="card">
-                    <div class="card_inner">
-                        <div class="card_front">
-                            <div class="slide lazyloaded"></div>
-                            <div class="image">
-                                <img
-                                    class="lazyloaded"
-                                    src="./assets/profile.jpg"
-                                    alt="Samuel Fry"
-                                />
-                            </div>
-                            <div class="title">Samuel Fry</div>
-                            <div class="subtitle">Web Developer</div>
-                            <div class="social">
-                                <a target="_blank" href="https://github.com/samfry13"><span class="fab fa-github"></span></a>
-                                <a target="_blank" href="https://www.linkedin.com/in/samuel-fry13/"><span class="fab fa-linkedin"></span></a>
-                            </div>
-                            <div class="links">
-                                <a href="https://storage.samuelfry.com/personal-website/Resume.pdf" download>Download Resume <span class="fas fa-download"></span></a>
-                                <a href="mailto:sam@samuelfry.com">Contact Me <span class="fas fa-envelope"></span></a>
-                            </div>
-                        </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
+      <div class="container">
+        <div class="card" id="card">
+          <div class="card_inner">
+            <main class="card_front">
+              <div class="slide"></div>
+              <div class="image">
+                <img
+                  src="./assets/profile.webp"
+                  alt="Samuel Fry"
+                  width="146"
+                  height="146"
+                />
+              </div>
+              <div class="title">Samuel Fry</div>
+              <div class="subtitle">Web Developer</div>
+              <div class="social">
+                <a
+                  target="_blank"
+                  href="https://github.com/samfry13"
+                  aria-label="Github"
+                  ><span class="fab fa-github"></span
+                ></a>
+                <a
+                  target="_blank"
+                  href="https://www.linkedin.com/in/samuel-fry13/"
+                  aria-label="Linkedin"
+                  ><span class="fab fa-linkedin"></span
+                ></a>
+              </div>
+              <div class="links">
+                <a
+                  href="https://storage.samuelfry.com/personal-website/Resume.pdf"
+                  download
+                  >Download Resume <span class="fas fa-download"></span
+                ></a>
+                <a href="mailto:sam@samuelfry.com"
+                  >Contact Me <span class="fas fa-envelope"></span
+                ></a>
+              </div>
+            </main>
+          </div>
         </div>
+      </div>
     </div>
     <ul class="bg-bubbles">
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
-        <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
+      <li></li>
     </ul>
   </body>
 </html>
